--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,23 +1,33 @@
-name: Pylint
+name: Python Setup
 
-on: [push]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  build:
+  setup:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.8", "3.9", "3.10"]
+    
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
+    - uses: actions/checkout@v3
+    
+    - name: Set up Python 3.8
       uses: actions/setup-python@v3
       with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+        python-version: '3.8'
+        check-latest: true
+        cache: 'pip'
+      continue-on-error: true
+    
+    - name: Upgrade pip
       run: |
-        python -m pip install --upgrade pip
-        pip install pylint
-    - name: Analysing the code with pylint
+        python -m ensurepip --default-pip
+        python -m pip install --upgrade pip setuptools wheel
+      continue-on-error: false
+    
+    - name: Verify Python installation
       run: |
-        pylint $(git ls-files '*.py')
+        python --version
+        pip --version
