--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -27,6 +27,15 @@ jobs:
         python -m pip install --upgrade pip setuptools wheel
       continue-on-error: false
     
+    - name: Install dependencies
+      run: |
+        pip install -r requirements.txt
+        
+    - name: Verify dependencies
+      run: |
+        pip freeze > installed.txt
+        diff requirements.txt installed.txt || true
+        
     - name: Verify Python installation
       run: |
         python --version
